--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -1,19 +1,19 @@
 # Base16 {{scheme-name}} - spicetify color config
 # Scheme by {{scheme-author}}
 [Base]
-text               = {{base05-hex}} 
-subtext            = {{base07-hex}} 
+text               = {{base07-hex}} 
+subtext            = {{base05-hex}} 
 sidebar-text       = {{base07-hex}}
 main               = {{base00-hex}} 
 sidebar            = {{base00-hex}} 
 player             = {{base00-hex}} 
 card               = {{base00-hex}} 
 shadow             = {{base00-hex}}
-selected-row       = {{base03-hex}} 
-button             = {{base0C-hex}} 
-button-active      = {{base0C-hex}}
-button-disabled    = {{base01-hex}}
-tab-active         = {{base0C-hex}} 
-notification       = {{base0E-hex}}
-notification-error = {{base08-hex}}
+selected-row       = {{base05-hex}} 
+button             = {{base08-hex}} 
+button-active      = {{base0F-hex}}
+button-disabled    = {{base04-hex}}
+tab-active         = {{base09-hex}} 
+notification       = {{base0C-hex}}
+notification-error = {{base09-hex}}
 misc               = {{base09-hex}}
